# nobs

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md
components/cache/: Cargo.toml
components/cache/src/: lib.rs  mem.rs  redis.rs
components/embed/: Cargo.toml
components/embed/src/: lib.rs
components/humanize/: Cargo.toml
components/humanize/src/: lib.rs
embed/src/: lib.rs
src/: access.rs  app.rs  config.rs  error.rs  humanize.rs  lib.rs  main.rs  repo.rs  state.rs  templates.rs
src/middleware/: mod.rs  repo.rs
src/services/: host_index.rs  mod.rs  parser.rs  statics.rs
src/views/: host_index.rs  index.rs  log_detail.rs  mod.rs  repo_index.rs  rev_detail.rs
static/: base.css  doc.css
templates/: host_index.html  layout.html  log_detail.html  log_macro.html  repo_index.html  rev_detail.html  rev_detail_macros.html
