[package]
name = "nobs"
version = "0.3.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[workspace]
members = [
	".", "components/embed"
]

[dependencies]
actix-web = "0.7"
comrak = "0.2"
config = { version = "0.9", default-features = false, features = ["toml"] }
embed = { version = "*", path = "components/embed" }
failure = "0.1"
git2 = "0.7"
glob = "0.2"
mime_guess = "2.0.0-alpha.6"
serde = "1.0"
serde_json = "1.0"
tera = "0.11"
walkdir = "2.2"
